force-app/main/default/objects/sugati__Tour_Overview_Settings__c/sugati__Tour_Overview_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Tour Overview Settings</label>
</CustomObject>