force-app/main/default/objects/sugati__Tour_Overview_Settings__c/fields/sugati__Widget_Column_3__c.field-meta.xml
<CustomField>
    <fullName>sugati__Widget_Column_3__c</fullName>
    <label>Widget Column 3</label>
    <type>TextArea</type>
</CustomField>